# CMusic

./: .gitignore  CMakeLists.txt  Readme.md
src/: main.cpp
src/app/: main.cpp
src/audio/: audioanalyzer.cpp  audioanalyzer.h  audioengine.cpp  audioengine.h  playbackcontroller.cpp  playbackcontroller.h
src/resources/fragmentShaders/: default.frag  default01.frag  default02.frag  default03.frag
src/resources/vertexShaders/: default.vert
src/ui/: MainWindow.cpp  MainWindow.h  musicplayer.cpp  musicplayer.h  playback.ui  playerwidget.cpp  playerwidget.h
src/visualizer/: visualizerwidget.cpp  visualizerwidget.h  visualwidget.cpp  visualwidget.h
